fixed UI issues

--- a/design-consistency.html
+++ b/design-consistency.html
@@ -272,7 +272,7 @@
         </div>
 
         <div class="button-group mt--20" style="text-align: center;">
-            <a href="blog-2.html" class="rn-btn">
+            <a href="portfolio.html" class="rn-btn">
                 <span>Go back</span>
                 <i data-feather="chevron-right"></i>
             </a>
