--- a/outlook_study.html
+++ b/outlook_study.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-      <link rel="shortcut icon" type="image/x-icon" href="../portfolio.github.io/assets/images/logo/logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo/logo.png">
     <!-- CSS 
     ============================================ -->
     <link rel="stylesheet" href="./assets/css/vendor/bootstrap.min.css">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/vendor/aos.css">
     <link rel="stylesheet" href="./assets/css/plugins/feature.css">
     <link rel="stylesheet"
-        href="../portfolio.github.io/cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        href="./cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
     <!-- Style css -->
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -40,7 +40,7 @@
                 <div class="header-left">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="logo">
+                            <img src="./assets/images/logo/logo.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
             <div class="menu-top">
                 <div class="menu-header">
                     <a class="logo" href="index.html">
-                        <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="Personal Portfolio">
+                        <img src="./assets/images/logo/logo.png" alt="Personal Portfolio">
                     </a>
                     <div class="close-button">
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
@@ -461,50 +461,51 @@
         </div>
 
     </main>
-    <!-- Start Footer Area -->
-    <div class="rn-footer-area rn-section-gap section-separator">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-area text-center">
-                        <div class="logo">
-                            <a href="index.html">
-                                <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="logo">
-                            </a>
-                        </div>
-                        <p class="description mt--30">© 2024. All rights reserved by <a href="index.html">Lulamile
-                                Mkhungela.</a></p>
+   <!-- Start Footer Area -->
+   <div class="rn-footer-area rn-section-gap section-separator">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="footer-area text-center">
+                    <div class="logo">
+                        <a href="index">
+                            <img src="./assets/images/logo/logo.png" alt="logo">
+                        </a>
                     </div>
+                    <p class="description mt--30">© 2024. All rights reserved by <a href="index.html">Lulamile
+                            Mkhungela.</a></p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Back to  top Start -->
+</div>
 
-    <div class="backto-top">
-        <div>
-            <i data-feather="arrow-up"></i>
-        </div>
+<div class="backto-top">
+    <div>
+        <i data-feather="arrow-up"></i>
     </div>
-    <!-- End Footer Area -->
-    <!-- JS ============================================ -->
-    <script src="../portfolio.github.io/assets/js/vendor/jquery.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/modernizer.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/feather.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/slick.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/bootstrap.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/text-type.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/wow.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/aos.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/particles.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/jquery-one-page-nav.js"></script>
-    <!-- main JS -->
-    <script src="../portfolio.github.io/assets/js/main.js"></script>
-    <script>
-        document.addEventListener('contextmenu', function (e) {
-            e.preventDefault();
-        });
-    </script>
+</div>
+
+<!-- Back to top end -->
+<!-- End Footer Area -->
+<!-- JS ============================================ -->
+<script src="./assets/js/vendor/jquery.js"></script>
+<script src="./assets/js/vendor/modernizer.min.js"></script>
+<script src="./assets/js/vendor/feather.min.js"></script>
+<script src="./assets/js/vendor/slick.min.js"></script>
+<script src="./assets/js/vendor/bootstrap.js"></script>
+<script src="./assets/js/vendor/text-type.js"></script>
+<script src="./assets/js/vendor/wow.js"></script>
+<script src="./assets/js/vendor/aos.js"></script>
+<script src="./assets/js/vendor/particles.js"></script>
+<script src="./assets/js/vendor/jquery-one-page-nav.js"></script>
+<!-- main JS -->
+<script src="./assets/js/main.js"></script>
+<script>
+    document.addEventListener('contextmenu', function (e) {
+        e.preventDefault();
+    });
+</script>
 </body>
 
 </html>
