--- a/ux-laws.html
+++ b/ux-laws.html
@@ -9,19 +9,19 @@
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../portfolio.github.io/assets/images/logo/logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/logo/logo.png">
     <!-- CSS 
     ============================================ -->
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/vendor/aos.css">
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/plugins/feature.css">
+    <link rel="stylesheet" href="./assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="./assets/css/vendor/slick.css">
+    <link rel="stylesheet" href="./assets/css/vendor/aos.css">
+    <link rel="stylesheet" href="./assets/css/plugins/feature.css">
     <link rel="stylesheet"
-        href="../portfolio.github.io/cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        href="./cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
     <!-- Style css -->
-    <link rel="stylesheet" href="../portfolio.github.io/../portfolio.github.io/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Principles in UI Design & UX Laws</title>
     <meta name="description" content="Top 10 Software Development Trends To Watch In 2023" />
 </head>
@@ -29,6 +29,8 @@
 <body class="template-color-1 spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
 
     <!-- Start Header -->
+ 
+<body class="template-color-1 spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
     <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
         <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
             <!-- Start Header Left -->
@@ -36,7 +38,7 @@
                 <div class="header-left">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="logo">
+                            <img src="./assets/images/logo/logo.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -48,9 +50,8 @@
                         <!-- Start Mainmanu Nav -->
                         <ul class="primary-menu nav nav-pills">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                           
-                                              <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                                              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 
                         </ul>
                         <!-- End Mainmanu Nav -->
@@ -85,7 +86,7 @@
             <div class="menu-top">
                 <div class="menu-header">
                     <a class="logo" href="index.html">
-                        <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="Personal Portfolio">
+                        <img src="" alt="Personal Portfolio">
                     </a>
                     <div class="close-button">
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
@@ -247,7 +248,7 @@
                     <div class="footer-area text-center">
                         <div class="logo">
                             <a href="index">
-                                <img src="../portfolio.github.io/assets/images/logo/logo.png" alt="logo">
+                                <img src="./assets/images/logo/logo.png" alt="logo">
                             </a>
                         </div>
                         <p class="description mt--30">© 2024. All rights reserved by <a href="index.html">Lulamile
@@ -263,22 +264,20 @@
             <i data-feather="arrow-up"></i>
         </div>
     </div>
-
-    <!-- Back to top end -->
     <!-- End Footer Area -->
     <!-- JS ============================================ -->
-    <script src="../portfolio.github.io/assets/js/vendor/jquery.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/modernizer.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/feather.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/slick.min.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/bootstrap.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/text-type.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/wow.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/aos.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/particles.js"></script>
-    <script src="../portfolio.github.io/assets/js/vendor/jquery-one-page-nav.js"></script>
+    <script src="./assets/js/vendor/jquery.js"></script>
+    <script src="./assets/js/vendor/modernizer.min.js"></script>
+    <script src="./assets/js/vendor/feather.min.js"></script>
+    <script src="./assets/js/vendor/slick.min.js"></script>
+    <script src="./assets/js/vendor/bootstrap.js"></script>
+    <script src="./assets/js/vendor/text-type.js"></script>
+    <script src="./assets/js/vendor/wow.js"></script>
+    <script src="./assets/js/vendor/aos.js"></script>
+    <script src="./assets/js/vendor/particles.js"></script>
+    <script src="./assets/js/vendor/jquery-one-page-nav.js"></script>
     <!-- main JS -->
-    <script src="../portfolio.github.io/assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
